# unix-fs-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  ufsss.c
includes/logging/: logging.h
includes/unix_fs_sim/: exits.h  ufs.h
src/: CMakeLists.txt  ansiColors.h  exits.h  logging.c  logging.priv.h  ufs.c  ufs.priv.h
src/models/high_level/: directory.c  directory.h  file.c  file.h
src/models/low_level/: block.c  block.h
src/models/mid_level/: block_bitmap.c  block_bitmap.h  data.c  data.h  data_bitmap.c  data_bitmap.h  inode.c  inode.h  inode_bitmap.c  inode_bitmap.h  inode_table.c  inode_table.h
